SF Primes/src/objects/Traver_Project__c.object
<CustomObject>
    <fields>
        <fullName>Project_Duration__c</fullName>
        <formula>Project_End_Date__c - Project_Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Duration</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Project_End_Date__c</fullName>
        <inlineHelpText>Date the project will end.   Used to cancel automated task and emails.</inlineHelpText>
        <label>Project End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project_Start_Date__c</fullName>
        <inlineHelpText>Day the project will start - Trigger for automated task and emails</inlineHelpText>
        <label>Project Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project_Status__c</fullName>
        <inlineHelpText>Project Status</inlineHelpText>
        <label>Consulting Project Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Backlog</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Projected_Miss__c</fullName>
        <label>Projected Miss</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Reassign__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If checked project needs to be reassigned.</inlineHelpText>
        <label>Reassign</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <formula>TEXT (Account__r.Region__c)</formula>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Renewal_Date__c</fullName>
        <label>Renewal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Renewal_Target_PSG__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Renewal Target - PSG</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Renewal_Target_Traver__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Renewal</inlineHelpText>
        <label>Renewal Target - Traver</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Renewal_Target__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Renewal in Process</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Roll_Call_Date_PSG__c</fullName>
        <label>Roll Call Date - PSG</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Roll_Call_Date_Traver__c</fullName>
        <inlineHelpText>Contract Received</inlineHelpText>
        <label>Roll Call Date - Traver</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sales_Type_PSG__c</fullName>
        <label>Sales Type - PSG</label>
        <picklist>
            <picklistValues>
                <fullName>Initial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renewal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conversion (dn)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conversion (up)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Month to Month</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sales_Type_Traver__c</fullName>
        <inlineHelpText>Sales Type</inlineHelpText>
        <label>Sales Type - Traver</label>
        <picklist>
            <picklistValues>
                <fullName>Initial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renewal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conversion (dn)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conversion (up)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Month to Month</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Schedule_Ratio__c</fullName>
        <label>Schedule Ratio</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ServiceEdge__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ServiceEdge</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Service_Start_Date__c</fullName>
        <label>Service Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Services_PSG__c</fullName>
        <label>Services - PSG</label>
        <picklist>
            <picklistValues>
                <fullName>Accounting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fixed Ops</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ServiceEdge</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Services_Traver__c</fullName>
        <inlineHelpText>Traver Servies</inlineHelpText>
        <label>Services - Traver</label>
        <picklist>
            <picklistValues>
                <fullName>20 Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BDC Unlimited</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BDM Network</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Development Intelligence</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Optimization University</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Store Visits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MNI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boot Camp Seats</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Show_Ratio__c</fullName>
        <label>Show Ratio</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Snapshot_Contact_sent_to_BI__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Snapshot Contact sent to BI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Snapshot_Installed__c</fullName>
        <label>Snapshot Installed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Software_Install__c</fullName>
        <label>Software Install</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Survey_Type__c</fullName>
        <label>Survey Type</label>
        <picklist>
            <picklistValues>
                <fullName>20-Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accelerator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EPC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Performance Coach</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TRV_Consulting_Project_Name__c</fullName>
        <label>Consulting Project Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TRV_EPC_Email__c</fullName>
        <label>EPC Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>TRV_EPC__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>EPC</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>TRV_Resource__c.TRV_FRM_Profile_Name_onUser__c</field>
                <operation>contains</operation>
                <value>Traver</value>
            </filterItems>
            <filterItems>
                <field>TRV_Resource__c.TRV_Resource__r.IsActive</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>TRV_Resource__c</referenceTo>
        <relationshipLabel>Consulting Projects (EPC)</relationshipLabel>
        <relationshipName>TRV_EPC_Consulting_Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TRV_FRM_Contract_End_Date_Traver__c</fullName>
        <formula>Install_Date_Traver__c +  (Contract_Term_Traver__c * 30)</formula>
        <label>Contract End Date - Traver</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TRV_FRM_Contract_Status_Traver__c</fullName>
        <formula>IF(Install_Date_Traver__c &gt; TODAY(), &apos;On Track&apos;, IF(TODAY() &gt; TRV_FRM_Contract_End_Date_Traver__c, IF(Total_Days_Contracted_Traver__c &gt; Onsite_Days_Used_Traver__c, &apos;Behind&apos;, IF(Total_Days_Contracted_Traver__c &lt; Onsite_Days_Used_Traver__c, &apos;Ahead&apos;, IF(Total_Days_Contracted_Traver__c = Onsite_Days_Used_Traver__c, &apos;On Track&apos;, &apos;&apos;))), 
IF(TRV_FRM_Expected_Visit_Traver__c &lt;  Onsite_Days_Used_Traver__c, &apos;Ahead&apos;, IF(TRV_FRM_Expected_Visit_Traver__c =  Onsite_Days_Used_Traver__c, 
&apos;On Track&apos;,IF(TRV_FRM_Expected_Visit_Traver__c &gt; Onsite_Days_Used_Traver__c,
&apos;Behind&apos;, &apos;&apos;)))))</formula>
        <label>Contract Status - Traver</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TRV_FRM_Days_Owed_Ahead_Traver__c</fullName>
        <formula>IF(Install_Date_Traver__c &gt; TODAY(), 0, IF(TODAY() &gt; TRV_FRM_Contract_End_Date_Traver__c,IF(Total_Days_Contracted_Traver__c &gt; Onsite_Days_Used_Traver__c, Total_Days_Contracted_Traver__c - Onsite_Days_Used_Traver__c, IF(Total_Days_Contracted_Traver__c &lt; Onsite_Days_Used_Traver__c, Total_Days_Contracted_Traver__c - Onsite_Days_Used_Traver__c, 0)),IF(TRV_FRM_Expected_Visit_Traver__c &gt; Onsite_Days_Used_Traver__c, TRV_FRM_Expected_Visit_Traver__c - Onsite_Days_Used_Traver__c, IF(TRV_FRM_Expected_Visit_Traver__c &lt; Onsite_Days_Used_Traver__c, TRV_FRM_Expected_Visit_Traver__c - Onsite_Days_Used_Traver__c, 0))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Owed/Ahead - Traver</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TRV_FRM_Expected_Visit_Traver__c</fullName>
        <formula>CEILING(CEILING((TODAY()-Install_Date_Traver__c)/30)/TRV_Frequency_Of_Visit_Traver__c) * ( Total_Days_Contracted_Traver__c/(Contract_Term_Traver__c/TRV_Frequency_Of_Visit_Traver__c))</formula>
        <label>Expected Visit - Traver</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TRV_FRM_of_Day_Traver_Used__c</fullName>
        <formula>IF( ISBLANK( Total_Days_Contracted_Traver__c ) || Total_Days_Contracted_Traver__c = 0, 0, (Onsite_Days_Used_Traver__c + TRV_Onsite_Days_Forfeited_Traver__c) /Total_Days_Contracted_Traver__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% of Day Traver Used</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>TRV_FRM_of_Days_Used_Traver__c</fullName>
        <formula>IF(ISBLANK( Total_Days_Contracted_Traver__c ) || Total_Days_Contracted_Traver__c = 0, IMAGE(&quot;/img/samples/color_red.gif&quot;, &quot;Red&quot;, 11,100), IF(((Onsite_Days_Used_Traver__c + TRV_Onsite_Days_Forfeited_Traver__c) /Total_Days_Contracted_Traver__c)*100&gt;100, IMAGE(&quot;/img/samples/color_red.gif&quot;, &quot;Red&quot;, 11,((Onsite_Days_Used_Traver__c + TRV_Onsite_Days_Forfeited_Traver__c) /Total_Days_Contracted_Traver__c)*100), IMAGE(&quot;/img/samples/color_green.gif&quot;, &quot;Green&quot;, 11,((Onsite_Days_Used_Traver__c + TRV_Onsite_Days_Forfeited_Traver__c) /Total_Days_Contracted_Traver__c)*100) &amp; IMAGE(&quot;/img/samples/color_red.gif&quot;, &quot;Red&quot;, 11, 100-(100* IF( ISBLANK( Total_Days_Contracted_Traver__c )|| Total_Days_Contracted_Traver__c = 0, 0, (( Onsite_Days_Used_Traver__c + TRV_Onsite_Days_Forfeited_Traver__c)/ Total_Days_Contracted_Traver__c)))))) &amp; &apos; &apos; &amp; TEXT( ROUND(IF( ISBLANK( Total_Days_Contracted_Traver__c )|| Total_Days_Contracted_Traver__c = 0, 0, (( Onsite_Days_Used_Traver__c + TRV_Onsite_Days_Forfeited_Traver__c)/ Total_Days_Contracted_Traver__c)*100) , 0)) &amp; &apos;%&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total days purchased minus total days logged as completed.    Will only adjust if days are logged. % of Day Used</inlineHelpText>
        <label>% of Day Used - Traver</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TRV_Frequency_Of_Visit_Traver__c</fullName>
        <label>Frequency Of Visit - Traver</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TRV_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Manager</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>TRV_Resource__c.TRV_FRM_Profile_Name_onUser__c</field>
                <operation>contains</operation>
                <value>Traver</value>
            </filterItems>
            <filterItems>
                <field>TRV_Resource__c.TRV_Resource__r.IsActive</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>TRV_Resource__c</referenceTo>
        <relationshipLabel>Consulting Projects (Manager)</relationshipLabel>
        <relationshipName>TRV_Manager_Consulting_Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TRV_Onsite_Days_Forfeited_Traver__c</fullName>
        <label>Onsite Days Forfeited - Traver</label>
        <summarizedField>Traver_Coaching__c.Number_of_Days_Traver__c</summarizedField>
        <summaryFilterItems>
            <field>Traver_Coaching__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Forfeiture</value>
        </summaryFilterItems>
        <summaryForeignKey>Traver_Coaching__c.Traver_Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TRV_PM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PM</label>
        <referenceTo>TRV_Resource__c</referenceTo>
        <relationshipLabel>Consulting Projects (PM)</relationshipLabel>
        <relationshipName>TRV_PM_Consulting_Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TRV_PSC_Email__c</fullName>
        <label>PSC Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>TRV_PSC__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PSC</label>
        <referenceTo>TRV_Resource__c</referenceTo>
        <relationshipLabel>Consulting Projects (PSC)</relationshipLabel>
        <relationshipName>TRV_PSC_Consulting_Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TRV_Process_Coach_Email__c</fullName>
        <label>Process Coach Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>TRV_Process_Coach__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Process Coach</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>TRV_Resource__c.TRV_FRM_Profile_Name_onUser__c</field>
                <operation>contains</operation>
                <value>Traver</value>
            </filterItems>
            <filterItems>
                <field>TRV_Resource__c.TRV_Resource__r.IsActive</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>TRV_Resource__c</referenceTo>
        <relationshipLabel>Consulting Projects (Process Coach)</relationshipLabel>
        <relationshipName>TRV_Process_Coach_Consulting_Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TRV_Pushes__c</fullName>
        <label># Pushes</label>
        <summarizedField>Traver_Coaching__c.TRV_Pushes__c</summarizedField>
        <summaryForeignKey>Traver_Coaching__c.Traver_Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TTS_Load__c</fullName>
        <defaultValue>false</defaultValue>
        <label>TTS Load</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T_E_Billed_to_Client_PSG__c</fullName>
        <defaultValue>false</defaultValue>
        <label>T&amp;E Billed to Client - PSG</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T_E_Billed_to_Client_Traver__c</fullName>
        <defaultValue>false</defaultValue>
        <label>T&amp;E Billed to Client - Traver</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tied_to_DMS_Unhook__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tied to DMS Unhook</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tied_to_DMS_Upgrade__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tied to DMS Upgrade</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tied_to_New_Software__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tied to New Software</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Total_Days_Contracted_Traver__c</fullName>
        <inlineHelpText>Onsite Days Purchased</inlineHelpText>
        <label>Total Days Contracted - Traver</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Days_Purchased_PSG__c</fullName>
        <label>Total Days Purchased - PSG</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Traver_Days__c</fullName>
        <inlineHelpText>Days Training Per Month. Days Per Month</inlineHelpText>
        <label>Traver Days</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0.33</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Traver_Frequency__c</fullName>
        <label>Traver Frequency</label>
        <picklist>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quarterly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bi-Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>One-Time</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Traver_Initial_Process_Override__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If box is checked initial process tasks and emails will not trigger.</inlineHelpText>
        <label>Traver - Initial Process Override</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Traver_Inside_Sales_Rep__c</fullName>
        <label>Traver Inside Sales Rep.</label>
        <picklist>
            <picklistValues>
                <fullName>Alayna Dufour</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daniel Ardelan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Elly Whalen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Matthew Aerts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Michael LaScola</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Traver_Sales_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Traver Sales Rep</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Traver_Projects1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Traver__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If box is checked the monthly tasks, emails will not be created each month or the process will stop</inlineHelpText>
        <label>Traver - Monthly Task Override</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VP__c</fullName>
        <formula>Account__r.Key_DOS__r.Manager.FirstName&amp;&quot; &quot;&amp; Account__r.Key_DOS__r.Manager.LastName</formula>
        <label>VP</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WebComposite_Installed__c</fullName>
        <label>WebComposite Installed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Welcome_Letter__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Box Checked when welcome letter Task Completed</inlineHelpText>
        <label>Welcome Letter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Workflow_Trigger_Date__c</fullName>
        <formula>Workflow_Trigger__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Equals Date when Workflow trigger field is populated with date of first Monday of the month.</inlineHelpText>
        <label>Workflow Trigger Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Workflow_Trigger__c</fullName>
        <formula>DATE(YEAR(TODAY()), MONTH(TODAY()),
  CASE(MOD(DATE(YEAR(TODAY()),MONTH(TODAY()),1) - DATE(1900, 1, 7), 7),
    0, 2,
    1, 1,
    2, 7,
    3, 6,
    4, 5,
    5, 4,
    6, 3,
  0)
)</formula>
        <label>Workflow Trigger</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X180__c</fullName>
        <defaultValue>false</defaultValue>
        <label>180</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X20_Group_Enrollment__c</fullName>
        <label>20 Group Enrollment</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>of_Days_Used_PSG__c</fullName>
        <description>IF( ISNULL(Total_Days_Purchased_PSG__c), 0, NULLVALUE(Onsite_Days_Used_PSG__c, 0) + NULLVALUE(Onsite_Days_Forfeited_PSG__c, 0) / Total_Days_Purchased_PSG__c )</description>
        <formula>IF( ISNULL(Total_Days_Purchased_PSG__c), 0, (NULLVALUE(Onsite_Days_Used_PSG__c,0) + NULLVALUE(Onsite_Days_Forfeited_PSG__c,0))/Total_Days_Purchased_PSG__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% of Days Used - PSG</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>of_Days_Used_Traver__c</fullName>
        <formula>IF( ISNULL( Total_Days_Contracted_Traver__c ), 0, (NULLVALUE( Onsite_Days_Used_Traver__c,0) + NULLVALUE(Onsite_Days_Forfeited_Traver__c,0))/ Total_Days_Contracted_Traver__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total days purchased minus total days logged as completed.    Will only adjust if days are logged. % of Day Used</inlineHelpText>
        <label>% of Day Used - Traver</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>of_Pep__c</fullName>
        <label># of Courses in PEP</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Users_on_PEP__c</fullName>
        <label>% of Users on PEP</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pf_Appt_to_RO_s__c</fullName>
        <label>% pf Appt. to RO&apos;s</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Consulting Project</label>
    <listViews>
        <fullName>ALL</fullName>
        <columns>Account__c</columns>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <columns>LAST_ACTIVITY</columns>
        <columns>Contract_Type_Traver__c</columns>
        <columns>Services_Traver__c</columns>
        <columns>Notes__c</columns>
        <columns>Lets_Get_Started__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Project_Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>ALL</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>My_Active_Projects</fullName>
        <columns>Account__c</columns>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <columns>LAST_ACTIVITY</columns>
        <columns>Contract_Type_Traver__c</columns>
        <columns>Services_Traver__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Project_Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>My Active Projects</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>Consulting# {00000}</displayFormat>
        <label>Consulting Project ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Consulting Projects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>DS_Traver_Req_CancelledSubstatus</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISPICKVAL(Project_Status__c, &quot;Cancelled&quot;), ISBLANK(TEXT(Cancelled_Substatus__c)))</errorConditionFormula>
        <errorDisplayField>Cancelled_Substatus__c</errorDisplayField>
        <errorMessage>Please enter value for Cancelled Substatus</errorMessage>
    </validationRules>
</CustomObject>